bug: first route list itetem stuck when scrolling on mobile
The first item does not update to unstuck when scrolling down untill
second swipe.

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -11,6 +11,13 @@ $divider-color:        #BDBDBD;
 
 body {
   overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.logo {
+  margin-top: 30px;
+  // margin: 0px;
 }
 
 #map {
@@ -54,6 +61,11 @@ li.location-suggestion {
   margin: 0px;
   padding: 0px;
   // position: absolute;
+}
+
+.route-list.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
 }
 
 .route-list-container {
@@ -126,4 +138,35 @@ li {
 /* The finishing CSS styles for the enter animation */
 .update-alert.ng-enter.ng-enter-active {
   opacity:1;
+}
+
+/*
+ *  slideout
+ */
+.slideout-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  width: 256px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  display: none;
+}
+
+.slideout-panel {
+  position: relative;
+  z-index: 1;
+}
+
+.slideout-open,
+.slideout-open body,
+.slideout-open .slideout-panel {
+  overflow: hidden;
+}
+
+.slideout-open .slideout-menu {
+  display: block;
 }
